--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "dev": "vite",
         "build": "vite build",
         "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "start": "set \"GENERATE_SOURCEMAP=false\" && dotenv -e .env.development craco start"
     },
     "dependencies": {
         "@chatscope/chat-ui-kit-react": "^1.10.1",
@@ -18,6 +19,7 @@
         "match-sorter": "^6.3.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-pdf": "^7.7.0",
         "react-router-dom": "^6.21.0",
         "sort-by": "^1.2.0",
         "styled-components": "^6.1.3",
