--- a/package.json
+++ b/package.json
@@ -11,17 +11,22 @@
         "start": "set \"GENERATE_SOURCEMAP=false\" && dotenv -e .env.development craco start"
     },
     "dependencies": {
+        "@ap.cx/react-fullpage": "^0.3.0",
         "@chatscope/chat-ui-kit-react": "^1.10.1",
+        "@fullpage/react-fullpage": "^0.1.42",
         "@tanstack/react-query": "^5.14.1",
         "antd": "^5.12.5",
         "axios": "^1.6.7",
         "firebase": "^10.7.2",
+        "fullpage.js": "^4.0.22",
         "localforage": "^1.10.0",
         "match-sorter": "^6.3.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-pdf": "^7.7.0",
         "react-router-dom": "^6.21.0",
+        "react-slick": "^0.30.2",
+        "slick-carousel": "^1.8.1",
         "sort-by": "^1.2.0",
         "styled-components": "^6.1.3",
         "uuid": "^9.0.1"
