--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "fullpage.js": "^4.0.22",
         "localforage": "^1.10.0",
         "match-sorter": "^6.3.1",
+        "pdfjs-dist": "^4.0.379",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-pdf": "^7.7.0",
