--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "axios": "^1.6.8",
         "firebase": "^10.7.2",
         "fullpage.js": "^4.0.22",
+        "html2canvas": "^1.4.1",
         "localforage": "^1.10.0",
         "match-sorter": "^6.3.1",
         "pdfjs-dist": "^4.0.379",
@@ -28,6 +29,7 @@
         "react-pdf": "^7.7.0",
         "react-router-dom": "^6.22.3",
         "react-slick": "^0.30.2",
+        "react-to-pdf": "^1.0.1",
         "slick-carousel": "^1.8.1",
         "sort-by": "^1.2.0",
         "styled-components": "^6.1.3",
