--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.51.3",
+        "react-modal": "^3.16.1",
         "react-pdf": "^7.7.0",
         "react-router-dom": "^6.23.0",
         "react-slick": "^0.30.2",
