--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
         "slick-carousel": "^1.8.1",
         "sort-by": "^1.2.0",
         "styled-components": "^6.1.3",
-        "uuid": "^9.0.1"
+        "uuid": "^9.0.1",
+        "zustand": "^4.5.2"
     },
     "devDependencies": {
         "@types/react": "^18.2.43",
