--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.51.3",
+        "react-infinite-scroller": "^1.2.6",
+        "react-intersection-observer": "^9.13.1",
         "react-latex": "^2.0.0",
         "react-lottie": "^1.2.4",
         "react-modal": "^3.16.1",
